--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,12 @@ yarn-error.log*
 # local env files
 .env*.local
 
+# .env is not used as we use .env.production instead
+.env
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# env
-.env
