--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
       - "3000:3000"
     environment:
       - SERVER_NAME: OpenDAoC
-      - SITE_URL: http://localhost:3000
       - SITE_TITLE: OpenDAoC | Account Manager
       - SITE_DESCRIPTION: OpenDAoC Account Manager allows you to link your OpenDAoC account to your Discord for easy password recovery.
       - SITE_FOOTER: OpenDAoC Account Manager
@@ -19,9 +18,10 @@ services:
       - DATABASE_USER: your_database_user
       - DATABASE_PASSWORD: your_database_password
       - DATABASE_NAME: your_database_name
-      - ENCRYPTION_KEY: change-me-please-123456789012
       - PROHIBITED_CHARACTERS: " ,#,&,%,.,!,^,_,-"
       - MIN_PASSWORD_LENGTH: 6
       - MAX_PASSWORD_LENGTH: 12
       - DISCORD_CLIENT_ID: your_discord_client_id
       - DISCORD_CLIENT_SECRET: your_discord_client_secret
+      - NEXTAUTH_URL: http://localhost:3000
+      - NEXTAUTH_SECRET: change-me-please-123456789012
